assets/css/main.css
/* ... */
#header #slogan {
	background-color: rgba(255,255,255,0.8);
	position: absolute;
	width: 50%;
	height: 188px;
	right: 0;
	text-align: center;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
#header #slogan h1 {
	position: relative;
	display: inline-block;
	text-align: left;
	color: #778c38;
	font-family: 'source_sans_proextralight';
	line-height: 1.1;
	font-size: 2.0em;
	margin: 0 auto;
/*	width: 370px;*/
	height: 50px;
	margin-top: 50px;
	opacity: 1.0;
	filter: alpha(opacity=100);
	/*display: table-cell;
	vertical-align: middle;*/
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}


#header.home {
	background: url('../images/header_bg.jpg') no-repeat content-box center;
	background-size: cover;
	height: 360px;
	padding-left: 95px;
	position: fixed;
	top: 0;
	left: 0;
  width: 100%;
  z-index: 999;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}

#header.home #slogan {
	background-color: rgba(255,255,255,0.8);
	position: absolute;
	width: 50%;
	height: 360px;
	right: 0;
	text-align: center;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
#header.home #slogan h1 {
	position: relative;
	display: inline-block;
	text-align: left;
	color: #778c38;
	font-family: 'source_sans_proextralight';
	line-height: 1.1;
	font-size: 2.6em;
	margin: 0 auto;
/*	width: 370px;*/
	height: 80px;
	margin-top: 130px;
	opacity: 1.0;
	filter: alpha(opacity=100);
	/*display: table-cell;
	vertical-align: middle;*/
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}


/* Sticky footer */
#footer {
/*	bottom: 0;
	position: absolute;*/
}

html {
  position: relative;
  min-height: 100%;
}
body .container-fluid {
  margin-bottom: 120px;
}
#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 114px;
}

#footer #contact {
	background: url('../images/nav-icons.png') no-repeat 0 -174px;
	height: 30px;
	margin-left: 20px;
	padding-left: 11px;
}

#footer #contact > h3 {
	font-family: 'source_sans_prolight';
	font-size: 24px;
	color: #232323;
	letter-spacing: 1.4px;
	line-height: 1.3;
}

#footer #contact span  {
	display: inline-block;
	vertical-align:top;
    letter-spacing: auto;
    font-family: 'source_sans_prolight';
    font-size: 16px;
    line-height: 1;
    margin-right: 25px;
    padding-bottom: 20px;
}

#last {
	margin-right: 0 !important;
}

#contact > span > i {
	font-family: 'source_sans_proitalic';
	font-style: normal;
}

#footer #fb-link {
    right:55px; 
    position:absolute;
}
#footer #twitter-link {
    right:10px; 
    position:absolute;
}

#main-content{
  padding: 20px;
  font-family: 'source_sans_proregular';
}

#header + #main-content{
  margin-top: 188px;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
#header.home + #main-content{
  margin-top: 360px;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
#main-content a{
  color: #cb7320;
}

/* home */
.home-page{
  font-family: 'source_sans_prolight' !important;
}
#home-service-links > div{
/*  padding: 0 20px;*/
    padding-bottom: 40px;
    /*border: 1px solid red;*/
} 
#home-service-links ul{
  padding-left: 0;
}
#home-service-links ul li{
  display: inline-block;
  margin-right: 5px;
  line-height: 30px;
  margin-bottom: 5px;
}
#home-service-links:lang(ka) ul li{
	font-size: 12px;
}
#home-service-links ul li:last-of-type{
  margin-right: 0;
}
#home-service-links ul li a{
  border-radius: 5px;
  border: solid 1px #cb7320;
  padding: 5px 10px;
}
#home-bins{
  background-color: #f5dd7d;
  text-align: left;
  padding: 0;
  position: relative;
  margin-bottom: 10px;
  border-left: solid 5px #ecbc00;
}
#home-bins img{
  max-width: 650px;
  width: 100%;
}
#home-bins:after{
	width: 0; 
	height: 0; 
	border-top: 27px solid transparent;
	border-bottom: 27px solid transparent;
	border-left: 27px solid #fff;
	position: absolute;
	top: 105px;
	left: -5px;
	content: "";
}
#home-what-recycling{
  font-family: 'source_sans_proregular';
  background-color: #acc563;
  color: #fff;
  margin-left: -20px !important;
  margin-right: 20px !important;
}
#home-what-recycling:before {
  content: "";
  position: absolute;
  bottom: 0; 
  right: 0;
  border-top: 55px solid transparent;
  border-right: 55px solid;
  width: 0;
}
#home-what-recycling > div{
 padding: 40px 23px 0px 23px;
}
#home-what-recycling h3{
  margin-top: 0;
  font-family: 'source_sans_proextralight'; 
  font-weight: bold;
}
#home-what-recycling:lang(ka) h3{
  font-weight: normal;
  font-size: 20px;
}
#home-what-recycling a{
  color: #fff;
}
#home-blog{
  padding-left: 27px;
  border-bottom: solid 1px #ecbc00;
  padding-bottom: 10px;
}
#home-blog #blog-items{
  padding-left: 0;
}
#home-blog #blog-items li {
  font-family: 'source_sans_prolight';
  margin-bottom: 3px;
}
#home-blog #blog-items li a{
  display: block;
  color: #000;
  margin-bottom: -5px;
}
#home-blog #blog-items li span{
  color: #cb7320;
  font-family: 'source_sans_proitalic';
}
#home-how{
  margin-top: 10px;
  margin-bottom: 20px;
}
#home-how h3{
  font-family: 'source_sans_prolight';
}
#home-how ol{
  list-style-type: none;
  counter-reset: home-counter;
  padding-left: 6px;
  margin-left: 2px;
  border-left: solid 2px #a6b37d;
  padding-top: 25px;
  margin-bottom: 0;
}
#home-how ol{
  position: relative;
}
#home-how:lang(ka) li{
	font-size: 13px;
}

#home-how ol:after{
	content: "";
	display:block; 
	margin: 0px auto;
	background: url('../images/how_big.png') no-repeat;
	width: 690px;
	height: 105px;
	position: absolute;
	top: 50px;
	left: 244px;
}
#home-how:lang(ka) ol:after{
	left: 284px;
	background-size: 552px 84px;
}
/* ... */

